[package]
name = "atem_rp2040_w5500"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
publish = false

[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.5"
defmt = "1"
defmt-rtt = "0.4"
edge_bmd_atem = { path = "../.." }
embassy-executor = { version = "0.10.0", features = [
    "platform-cortex-m",
    "executor-thread",
    "defmt",
] }
embassy-futures = "0.1.1"
embassy-net = { version = "0.9.0", default-features = false, features = [
    "defmt",
    "medium-ethernet",
    "proto-ipv4",
    "udp",
    "dhcpv4",
] }
embassy-net-wiznet = { version = "0.3.0", features = ["defmt"] }
embassy-rp = { version = "0.10.0", features = ["defmt", "rt", "time-driver", "rp2040"] }
embassy-time = { version = "0.5.0", features = ["defmt"] }
embedded-alloc = { version = "0.6", default-features = false, features = ["llff"] }
embedded-hal-bus = { version = "0.3.0", features = ["async"] }
embedded-io-async = { version = "0.7.0", default-features = false, features = ["defmt"] }
panic-probe = { version = "0.3.2", features = ["print-defmt"] }
static_cell = "2.1.1"
[profile.release]
debug = 2
lto = true
opt-level = "s"
